# realWorldHaskell

ch03/: add.hs  add2.hs
ch04/: Adler32.hs  FixLines.hs  IntParse.hs  InteractWith  InteractWith.hs  SplitLines.hs  SuffixTree.hs
ch05/: Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  mypretty.cabal
