Name:             mypretty
Version:          0.1
Synopsis:         My pretty printing library, with JSON support
Description:
  A simple pretty printing library that illustrates how to
  develop a Haskell library.
Author:           Bonface K. M.
Maintainer:       bonfacemunyoki@gmail.com
Cabal-Version:    >= 1.24.0.2
library
  Exposed-Modules: Prettify
                   PrettyJSON
                   SimpleJSON
  Build-Depends:   base >= 2.0
